Fix Maven plugin issues and update project configuration
- Fixed spring-boot-maven-plugin version reference from ${project.parent.version} to explicit 3.4.5
- Updated maven-compiler-plugin from 3.8.1 to 3.13.0 to resolve plugin not found error
- All previously staged deletions and modifications included in this stable commit